finishing todos
