# src/swagger.yaml
@@ -198,6 +198,236 @@ paths:
                   - tokenExpiresAt
       security:
         - bearerAuth: []
+  /todos:
+    get:
+      summary: Get user todos
+      tags:
+        - todos
+      parameters: []
+      operationId: getUserTodos
+      responses:
+        '200':
+          description: '200'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: number
+                    userId:
+                      type: number
+                    description:
+                      type: string
+                    doneAt:
+                      type: string
+                      format: date-time
+                      nullable: true
+                    createdAt:
+                      type: string
+                      format: date-time
+                    updatedAt:
+                      type: string
+                      format: date-time
+                  required:
+                    - id
+                    - userId
+                    - description
+                    - doneAt
+                    - createdAt
+                    - updatedAt
+      security:
+        - bearerAuth: []
+    post:
+      summary: Create todo
+      tags:
+        - todos
+      parameters: []
+      operationId: createTodo
+      requestBody:
+        description: Body
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                description:
+                  type: string
+              required:
+                - description
+      responses:
+        '200':
+          description: '200'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  userId:
+                    type: number
+                  description:
+                    type: string
+                  doneAt:
+                    type: string
+                    format: date-time
+                    nullable: true
+                  createdAt:
+                    type: string
+                    format: date-time
+                  updatedAt:
+                    type: string
+                    format: date-time
+                required:
+                  - id
+                  - userId
+                  - description
+                  - doneAt
+                  - createdAt
+                  - updatedAt
+      security:
+        - bearerAuth: []
+  /todos/{todoId}:
+    patch:
+      summary: Update todo
+      tags:
+        - todos
+      parameters:
+        - name: todoId
+          in: path
+          required: true
+          schema:
+            type: number
+            nullable: true
+      operationId: updateTodo
+      requestBody:
+        description: Body
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                description:
+                  type: string
+                doneAt:
+                  type: string
+                  format: date-time
+                  nullable: true
+              required:
+                - doneAt
+      responses:
+        '200':
+          description: '200'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  userId:
+                    type: number
+                  description:
+                    type: string
+                  doneAt:
+                    type: string
+                    format: date-time
+                    nullable: true
+                  createdAt:
+                    type: string
+                    format: date-time
+                  updatedAt:
+                    type: string
+                    format: date-time
+                required:
+                  - id
+                  - userId
+                  - description
+                  - doneAt
+                  - createdAt
+                  - updatedAt
+        '403':
+          description: '403'
+          content:
+            application/json:
+              schema:
+                type: string
+                enum:
+                  - You are not authorized to update this to-do
+        '404':
+          description: '404'
+          content:
+            application/json:
+              schema:
+                type: string
+                enum:
+                  - To-do not found
+      security:
+        - bearerAuth: []
+    delete:
+      summary: Delete todo
+      tags:
+        - todos
+      parameters:
+        - name: todoId
+          in: path
+          required: true
+          schema:
+            type: number
+            nullable: true
+      operationId: deleteTodo
+      responses:
+        '204':
+          description: '204'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  userId:
+                    type: number
+                  description:
+                    type: string
+                  doneAt:
+                    type: string
+                    format: date-time
+                    nullable: true
+                  createdAt:
+                    type: string
+                    format: date-time
+                  updatedAt:
+                    type: string
+                    format: date-time
+                required:
+                  - id
+                  - userId
+                  - description
+                  - doneAt
+                  - createdAt
+                  - updatedAt
+        '403':
+          description: '403'
+          content:
+            application/json:
+              schema:
+                type: string
+                enum:
+                  - You are not authorized to update this to-do
+        '404':
+          description: '404'
+          content:
+            application/json:
+              schema:
+                type: string
+                enum:
+                  - To-do not found
+      security:
+        - bearerAuth: []
 info:
   title: My API
   version: 1.0.0
